finished cicd work